--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-    "name": "movix",
+    "homepage": "http://nitishk99.github.io/MovieMania",
+    "name": "MovieMania",
     "private": true,
     "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "predeploy":"npm run build",
+        "deploy":"gh-pages",
         "build": "vite build",
         "preview": "vite preview"
     },
@@ -28,6 +31,7 @@
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@vitejs/plugin-react": "^3.0.0",
+        "gh-pages": "^6.1.1",
         "vite": "^4.0.0"
     }
 }
