--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://nitishk99.github.io/MovieMania",
+    "homepage": "http://nitishk99.github.io/",
     "name": "MovieMania",
     "private": true,
     "version": "0.0.0",
